Fixed home page cards alignment

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -9,6 +9,10 @@ body {
     height: 100%;
 }
 
+/** {
+    outline: 1px dashed red;
+}*/
+
 main {
     display: flex;
     justify-content: center;
@@ -31,4 +35,7 @@ main {
 .card-container {
     width: 100%;
     margin: 4%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
